<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvDoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvNom1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvApe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/last_name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/numero"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvTipoDoccumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/txtIdType"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvTipoEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/empleado_type"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvCargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/txtCargo"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvEspecialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/txtEspecialidad"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/nameUsuario"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txvContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/prompt_password"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"/>

</LinearLayout>