<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Registro.RegistroEmpleados">

    <EditText
        android:id="@+id/txtlastname2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/last_name2"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtlastname"
        app:layout_constraintTop_toBottomOf="@+id/txtname2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtname2"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/name2"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/txtname"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtlastname"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtpassword"
        app:layout_constraintStart_toStartOf="@+id/txtpassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Spinner
        android:id="@+id/spid_type"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toEndOf="@+id/txtIdType2"
        app:layout_constraintTop_toBottomOf="@+id/txtlastname"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spempleado_type"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/txtEmpType2"
        app:layout_constraintTop_toBottomOf="@+id/txtDocumento"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spespempleado_type"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/txtEspType2"
        app:layout_constraintTop_toBottomOf="@+id/spcargo_type"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtIdType2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/txtIdType"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlastname" />

    <TextView
        android:id="@+id/txtEmpType2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtEmType"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDocumento" />

    <Spinner
        android:id="@+id/spcargo_type"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toEndOf="@+id/txtCargo"
        app:layout_constraintTop_toBottomOf="@+id/spempleado_type"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtCargo"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtCargo"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spempleado_type" />

    <TextView
        android:id="@+id/txtEspType2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtEspecialidad"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCargo" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="40dp"
        android:password="true"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spespempleado_type"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/id"
        android:inputType="number"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spid_type"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="376dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/descripcionImagen"
        app:layout_constraintBottom_toTopOf="@+id/EdtNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/irMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B65538"
        android:text="@string/irMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btnEditarEmpleado"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3949AB"
        android:text="@string/btnEditar"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegisEmpleado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/btnRegisEmpleado"
        app:layout_constraintTop_toTopOf="@+id/btnRegisEmpleado"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegisEmpleado"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#3949AB"
        android:text="@string/action_register_short"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

    <EditText
        android:id="@+id/EdtNumero"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginBottom="552dp"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>